# dialogue-agent-memory-bd8d

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  download_hf_datasets.py  validate_datasets.py
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: locomo_results.json  selfaware_results.json  summary_statistics.json
src/: complete_analysis.py  memory_gap_detector.py  run_experiments.py
